--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,10 @@ services:
       context: centos7
     networks:
       - net
+
   db_host:
     container_name: db
-    image: mysql 5.7
+    image: mysql:5.7
     environment:
       - "MYSQL_ROOT_PASSWORD=1234"
     volumes:
