--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,23 +10,23 @@ services:
     networks:
       - net
 
-#  remote_host:
-#    container_name: remote-host
-#    image: remote-host
-#    build:
-#      context: centos7
-#    networks:
-#      - net
-#
-#  db_host:
-#    container_name: db
-#    image: mysql:5.7
-#    environment:
-#      - "MYSQL_ROOT_PASSWORD=1234"
-#    volumes:
-#      - "$PWD/db_data:/var/lib/mysql"
-#    networks:
-#      - net
+  remote_host:
+    container_name: remote-host
+    image: remote-host
+    build:
+      context: centos7
+    networks:
+      - net
+
+  db_host:
+    container_name: db
+    image: mysql:5.7
+    environment:
+      - "MYSQL_ROOT_PASSWORD=1234"
+    volumes:
+      - "$PWD/db_data:/var/lib/mysql"
+    networks:
+      - net
 
 networks:
   net:
